--- a/Lesson__037 (Event delegation and ClassList)/css.css
+++ b/Lesson__037 (Event delegation and ClassList)/css.css
@@ -1,13 +1,14 @@
 button {
   width: 150px;
   height: 50px;
-  background-color: green;
+  background-color: #00abb8;
   border: none;
   color: #fff;
   border-radius: 10px;
   outline: none;
   cursor: pointer;
   transition: 0.3s;
+  margin: 5px;
 }
 button:hover {
   transform: scale(0.95);
@@ -22,4 +23,8 @@ button:hover {
 a {
   display: block;
   margin-top: 30px;
+}
+
+.red {
+  background-color: rgb(165, 0, 0);
 }
